# cartesi-coprocessor-eigenlayer

./: .gitmodules  Cargo.toml  Dockerfile  README.md
contracts/src/: EigenlayerQuery.sol
src/: eigenlayer.rs  main.rs
test/script/: devnet.sh
